--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="title"><span>Login Forrm</span></div>
+    <div class="title"><span>Login Form</span></div>
     <form action="#">
       <div class="row">
         <i class="fas fa-user"></i>
